--- a/client/src/css/EditorPage.css
+++ b/client/src/css/EditorPage.css
@@ -1,47 +1,74 @@
 /* LandingPage.css  */
 
-@import url('./fonts.css');
+@import url('../css/fonts.css');
 
-body {
-  max-height: 100%;
-  max-width: 100%;
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit; 
 }
 
-.editor-container {
-  text-align: center;
+body {
+  height: 100%;
   width: 100%;
+  background: #000;
+  color: #fff;
+}
+
+.editor-page {
+  width: 100vw;
   height: 100vh;
   padding: 0;
   margin: 0;
+  background: #000;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  x-overflow: hidden;
+}
+
+.banner {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 50px;
+    background: none;
+    margin: 0;
+    padding: 0;
+    z-index: 1000;
 }
 
 .editor-header {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 200px;
+  height: auto;
   display: flex;
   align-items: center;
-  justify-content: center;
-  color: white;
+  justify-content: center;  
+  background: #000;
 }
 
 .editor-content {
   position: relative;
-  top: 25vh;
   display: flex;
   width: 100%;
-    padding: 50px;
-    margin: 50px;
+  padding: 20px;
+  margin: 20px;
   align-items: center;
   justify-content: center;
   height: auto;
-    flex: 1;
+  background: #000;
+  color: #fff;
+  flex: 1;
 }
 
 @media screen and (max-width: 700px) {
 
-    editor-page {
+    .editor-page {
         padding: 10px;
     }
 }
